# go-it-web-hw13-RESTAPI-Django

./: README.md
Django_hw/: README.md  pyproject.toml
Django_hw/quotes_site/quotes/: forms.py  models.py  urls.py  utils.py  views.py
Django_hw/quotes_site/quotes/migrations/: 0001_initial.py
Django_hw/quotes_site/quotes/templates/quotes/: add_author.html  add_quote.html  all_quotes_autor.html  all_quotes_one_tag.html  base.html  index.html  quotes.html  random_quote.html  show_author.html
Django_hw/quotes_site/quotes/templatetags/: extract.py
Django_hw/quotes_site/quotes_site/: settings.py  urls.py
Django_hw/quotes_site/users/: forms.py  urls.py  views.py
Django_hw/quotes_site/utils/: add_quotes.py  authors.json  migration.py  quotes.json
Fast_api_hw/: docker-compose.yml  main.py  pyproject.toml
Fast_api_hw/postgres-data/base/13458/: pg_internal.init
Fast_api_hw/postgres-data/base/16384/: 1249  16385  16405  16407  16414  16416  pg_internal.init
Fast_api_hw/postgres-data/global/: pg_control  pg_internal.init
Fast_api_hw/postgres-data/pg_stat/: db_0.stat  db_13458.stat  db_16384.stat  global.stat
Fast_api_hw/postgres-data/pg_stat_tmp/: db_0.stat  db_13458.stat  db_16384.stat  global.stat
Fast_api_hw/src/: schemas.py
Fast_api_hw/src/conf/: config.ini
Fast_api_hw/src/database/: db.py  models.py
Fast_api_hw/src/repository/: clients.py  users.py
Fast_api_hw/src/routes/: auth.py  clients.py  users.py
Fast_api_hw/src/services/: auth.py  email.py  generate_password.py  upload_avatar.py
(+8 files in other folders)
